force-app/main/default/objects/Field_Restriction_Rules__c/Field_Restriction_Rules__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Field Restriction Rules</label>
</CustomObject>