force-app/main/default/objects/Field_Restriction_Rules__c/fields/Enable_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Enable_Restriction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Restriction</label>
    <type>Checkbox</type>
</CustomField>