force-app/main/default/objects/Field_Restriction_Rules__c/fields/Object_Api__c.field-meta.xml
<CustomField>
    <fullName>Object_Api__c</fullName>
    <label>Object Api</label>
    <length>255</length>
    <type>Text</type>
</CustomField>